--- a/templates/game.html
+++ b/templates/game.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+    <div class="controls">
+        <div>Движение: WASD или стрелки</div>
+        <div>Сбор: Пробел или E</div>
+    </div>
     <div class="game-container">
         <canvas id="gameCanvas"></canvas>
         
